# TrayFlag

./: LICENSE  README.md  README.ru.md  TrayFlagLastVersion.txt
TrayFlag/: build.bat  build_all.bat  build_python.bat  build_rust.bat  run_trayflag.py  updater.ps1
TrayFlag/assets/i18n/: en.json  en.json.bak  ru.json
TrayFlag/getip/: getip_ipify.ps1  getip_ipinfo.ps1  getip_myip.ps1
TrayFlag/rust_ip_lookup_cli/: Cargo.toml
TrayFlag/rust_ip_lookup_cli/src/: main.rs
TrayFlag/src/: TrayFlag.py  app.py  config.py  constants.py  dialogs.py  idle_detector.py  ip_fetcher.py  ip_lookup.go  main.py  sound_manager.py  state_manager.py  themes.py  translator.py  tray_menu.py  update_handler.py  utils.py
_legacy/v1.0.0-pyinstaller/: TrayFlag.py
_legacy/v1.0.0-pyinstaller/assets/i18n/: en.json
_legacy/v1.1.0-nuitka_bin/: build.bat  organize_build.py
_legacy/v1.1.0-nuitka_bin/assets/i18n/: ru.json
_legacy/v1.1.0-nuitka_bin/src/: TrayFlag_core.py
_legacy/v1.2.0-no_ipify_org/: build.bat
